--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "@google/genai": "^1.22.0",
-    "lucide-react": "^0.300.0",
-    "framer-motion": "^11.0.0"
+    "lucide-react": "^0.469.0",
+    "framer-motion": "^11.0.0",
+    "@supabase/supabase-js": "^2.47.12"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
